--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src="библиотека.png" alt="Ответы на популярные вопросы">
     </a>
     <a href="#" class="image-button3">
-      <img src="уник1.png" alt="Квизлеты">
+      <img src="уник.png" alt="Квизлеты">
     </a>
     <a href="#" class="image-button4">
       <img src="дом.png" alt="Личный кабинет">
